# Unhideable

./: .gitignore  LeakDojo_Attack_Analysis.md  README.md  evaluation_atks.py  main.py  pyproject.toml  requirements.txt
attack_shop/adv_strings/: collection.json
configs/: __init__.py  config_base.py  enronmail.py  fiqa.py  nfcorpus.py  scifact.py
scripts/: .gitignore  README.md  cmds.sh  pre.py  start_qwen_32B.sh  start_qwen_8B.sh  visualize_attention.py  visualize_entropy.py  visualize_max.py  visualize_r2.py
scripts/cipher_attack/: .env.example  cmds.sh  llm.py  prompts.py
scripts/cipher_attack/results/: gpt_caesar.json  gpt_inverse.json  gpt_safe.json  gpt_space.json  qwen_space.json  qwen_verbatim.json  qwensafe.json
src/: __init__.py  interfaces.py
src/components/: __init__.py  defense.py  llm.py  prompts.py  retrieval.py  scoring.py  utils.py
src/pipeline/: __init__.py  attack_dgea.py  attack_ikea.py  attack_por.py  attack_rtf.py  attack_static.py  evaluation.py  rag.py  utils.py
src/skuas/: __init__.py  bbqg.py  dgea.py  ikea.py  por.py  rtf.py  wbtq.py
tools/data_processor/: chatdoctor_to_corpus.ipynb  enron_mail_to_corpus.ipynb  scifact_to_corpus.ipynb  twcs_to_corpus.ipynb  wikitext_to_corpus.ipynb
