[project]
name = "leakdojo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.2",
    "fire>=0.7.1",
    "flagembedding>=1.3.5",
    "joblib>=1.4.2",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langchain-huggingface>=1.2.1",
    "longchain>=0.4.2",
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "numpy>=2.2.6",
    "pandas>=2.2.2",
    "rouge-score>=0.1.2",
    "vllm>=0.5.5",
    "zstandard>=0.25.0",
]
